OnScreenChat: Fix broken layout
See: https://mantis.ilias.de/view.php?id=40292

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+/*
+* Dependencies
+*/
 /*!
  * Datetimepicker for Bootstrap 3
  * version : 4.17.37
@@ -679,8 +682,9 @@ table.mceToolbar tbody, table.mceToolbar tr, table.mceToolbar td {
 }
 
 /*
-* Dependencies
-*/ /* print less */
+* Normalize
+*/
+/* print less */
 @media print {
   * {
     /* see bug 0022342 */
@@ -888,9 +892,6 @@ th {
   padding: 0;
 }
 
-/*
-* Normalize
-*/
 .row {
   --bs-gutter-x: 30px;
   --bs-gutter-y: 0;
@@ -1970,6 +1971,9 @@ th {
     display: none !important;
   }
 }
+/*
+* Elements
+*/
 * {
   box-sizing: border-box;
 }
@@ -2345,8 +2349,9 @@ code {
   }
 }
 /*
-* Elements
+* Components
 */
+/* UI Framework */
 .c-tooltip__container {
   position: relative;
   display: inline-block;
@@ -9603,6 +9608,7 @@ td.c-table-data__cell--highlighted {
   width: 5rem;
 }
 
+/* Component parts from old delos.scss */
 div#agreement {
   width: 100%;
   height: 375px;
@@ -10295,6 +10301,7 @@ div.il_info {
   border-color: #dddddd;
 }
 
+/* Adapted from Bootstrap 3 */
 .fade {
   opacity: 0;
   -webkit-transition: opacity 0.15s linear;
@@ -10922,6 +10929,7 @@ tbody.collapse.in {
   clip: auto;
 }
 
+/* Legacy Modules & Services */
 /* Modules/Bibliographic */
 span.bibl_text_inline_Emph {
   font-style: italic;
@@ -16541,9 +16549,15 @@ div.ilCreationFormSection .form-horizontal {
   overflow: visible;
   pointer-events: none;
   z-index: 1039;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 #onscreenchat-container .iosOnScreenChat {
   margin-right: -3px;
+  margin-left: -15px;
+  position: relative;
 }
 #onscreenchat-container .popover {
   max-width: 200px;
@@ -16560,9 +16574,6 @@ div.ilCreationFormSection .form-horizontal {
 #onscreenchat-container .popover a img {
   max-width: 19px;
   max-height: 19px;
-}
-#onscreenchat-container .row {
-  position: relative;
 }
 #onscreenchat-container .chat-window-wrapper {
   bottom: 0;
@@ -16653,12 +16664,23 @@ div.ilCreationFormSection .form-horizontal {
 #onscreenchat-container .chat-window-wrapper .chat li {
   padding-bottom: 5px;
 }
+#onscreenchat-container .chat-window-wrapper .chat li:before {
+  display: table;
+  content: " ";
+}
+#onscreenchat-container .chat-window-wrapper .chat li:after {
+  display: table;
+  content: " ";
+  clear: both;
+}
 #onscreenchat-container .chat-window-wrapper .chat li.separator {
   text-align: center;
   background-color: #f9f9f9;
 }
 #onscreenchat-container .chat-window-wrapper .chat li.separator p {
   font-size: 0.75rem;
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
 #onscreenchat-container .chat-window-wrapper .chat li.header, #onscreenchat-container .chat-window-wrapper .chat li.message {
   padding-left: 15px;
@@ -16720,6 +16742,7 @@ div.ilCreationFormSection .form-horizontal {
   padding-left: 0;
   padding-right: 0;
   padding-bottom: 0;
+  width: 100%;
 }
 #onscreenchat-container .chat-window-wrapper .panel .panel-body .fader {
   position: -webkit-sticky;
@@ -18612,13 +18635,6 @@ img.ilUserXXSmall {
   outline: 3px solid #0078D7;
 }
 
-/*
-* Components
-*/
-/* UI Framework */
-/* Component parts from old delos.scss */
-/* Adapted from Bootstrap 3 */
-/* Legacy Modules & Services */
 /*
 	These classes are used to limit the number of rows when displaying larger chunks of text.
 	The mixin receives $height-in-rows as an integer. The classes il-multi-line-cap-2,3,5,10
